fini avc commentaires

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
   </div>
   <script>
-    $("#text").show();
+    $("#text").show(); // montre la div text
   </script>
 </body>
 </html>
